installstubs/iptables.up.rules
# Generated by iptables-save v1.4.14 on Thu May  2 21:00:05 2013

*filter
:INPUT DROP [151:5908]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [987:142897]
-A INPUT -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i ppp+ -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -d 10.254.254.254/32 -i eth1 -o eth1 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i ppp+ -j ACCEPT
-A FORWARD -o ppp+ -j ACCEPT

COMMIT
# Completed on Thu May  2 21:00:05 2013
# Generated by iptables-save v1.4.14 on Thu May  2 21:00:05 2013
*nat
:PREROUTING ACCEPT [379:33051]
:INPUT ACCEPT [84:5706]
:OUTPUT ACCEPT [124:8912]
:POSTROUTING ACCEPT [1:240]
-A PREROUTING ! -s 10.254.254.254/32 -i eth1 -p udp -m udp --dport 53 -j DNAT --to-destination 10.254.254.254:53
-A POSTROUTING -d 10.254.254.254/32 -o eth1 -p udp -j SNAT --to-source 10.254.254.254
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o ppp+ -j MASQUERADE

COMMIT
# Completed on Thu May  2 21:00:05 2013
# Generated by iptables-save v1.4.14 on Thu May  2 21:00:05 2013

*mangle
:PREROUTING ACCEPT [4908:2280131]
:INPUT ACCEPT [2112:922194]
:FORWARD ACCEPT [2719:1350504]
:OUTPUT ACCEPT [1644:232182]
:POSTROUTING ACCEPT [4363:1582686]

COMMIT
# Completed on Thu May  2 21:00:05 2013
